# OS-Project-02

./: .gitignore
docs/: README.md
src/hello/: build.sh  hello.c
src/randocha_module/: CMakeLists.txt  Makefile  randocha_module.c  user_space.c
src/randocha_module/src/: .randocha_module.ko.cmd  .randocha_module.mod.cmd  .randocha_module.mod.o.cmd  .randocha_module.o.cmd  Kbuild  Makefile  modules.order  plugin.sh  plugout.sh  randocha_module.ko  randocha_module.mod  randocha_module.mod.c  user_space
src/syshook/: Makefile  build.sh  syshook.c
